--- a/package.json
+++ b/package.json
@@ -5,17 +5,31 @@
     "description": "Server system for gulp-recipe",
     "main": "./scripts/gulp-recipe-node.js",
     "dependencies": {
-        "bugcore": "0.3.12"
+        "bugcore": "0.3.24",
+        "config": "1.19.0",
+        "express": "4.13.4",
+        "firebase": "2.4.0",
+        "firebase-token-generator": "2.0.0",
+        "fireproof": "3.1.0"
     },
     "scripts": {
+        "start": "node ./dist/scripts/gulp-recipe-server-start.js",
         "test": "gulp test"
     },
     "devDependencies": {
+        "babel-jest": "^5.3.0",
+        "babel-preset-es2015": "^6.3.13",
+        "eslint": "^1.10.3",
         "gulp": "^3.9.0",
-        "gulp-recipe": "^0.0.2"
+        "gulp-babel": "^6.1.1",
+        "gulp-eslint": "^1.1.1",
+        "gulp-jest-iojs": "^1.0.3",
+        "gulp-sourcemaps": "^1.6.0",
+        "gulp-util": "^3.0.7",
+        "jest-cli": "^0.7.1"
     },
     "author": "Brian Neisler <me@brianneisler.com>",
     "engines": {
-        "node": ">= 0.5.0"
+        "node": ">= 0.5.5"
     }
 }
