--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
     "version": "0.0.1",
     "private": true,
     "description": "Server system for bitrecipe",
-    "main": "./scripts/bitrecipe-node.js",
+    "main": "index.js",
     "dependencies": {
         "aws-sdk": "2.2.33",
+        "babel-polyfill": "6.5.0",
         "bugcore": "0.3.26",
         "config": "1.19.0",
         "express": "4.13.4",
@@ -19,6 +20,7 @@
         "test": "gulp test"
     },
     "devDependencies": {
+        "babel-eslint": "^5.0.0",
         "babel-jest": "^5.3.0",
         "babel-preset-es2015": "^6.3.13",
         "babel-preset-stage-2": "^6.5.0",
@@ -34,6 +36,6 @@
     },
     "author": "Brian Neisler <me@brianneisler.com>",
     "engines": {
-        "node": ">= 0.5.5"
+        "node": ">= 0.5.6"
     }
 }
