--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-    "name": "bitrecipe-server",
-    "version": "0.0.1",
+    "name": "bitpack-server",
+    "version": "0.0.2",
     "private": true,
-    "description": "Server system for bitrecipe",
+    "description": "Server system for bitpack",
     "main": "index.js",
     "dependencies": {
         "aws-sdk": "2.2.33",
         "babel-polyfill": "6.5.0",
-        "bugcore": "0.3.26",
+        "bitpack": "0.0.1",
+        "bugcore": "0.3.27",
         "config": "1.19.0",
         "express": "4.13.4",
         "firebase": "2.4.0",
@@ -16,10 +17,11 @@
         "s3-upload-stream": "1.0.7"
     },
     "scripts": {
-        "start": "node ./dist/scripts/bitrecipe-server-start.js",
+        "start": "node ./dist/scripts/bitpack-server-start.js",
         "test": "gulp test"
     },
     "devDependencies": {
+        "babel": "^6.5.2",
         "babel-eslint": "^5.0.0",
         "babel-jest": "^5.3.0",
         "babel-preset-es2015": "^6.3.13",
